button: fix css flicker

--- a/components/button/style.scss
+++ b/components/button/style.scss
@@ -85,12 +85,10 @@ $button__focus-animation-duration: 1667ms;
     background-color: transparent;
   }
 
-  &:active:not([disabled]) {
-    &,
-    &:focus {
-      transition-duration: $button__focus-animation-delay, 500ms;
-      background-color: var(--button__press-color);
-    }
+  &:active::before ,
+  &:active:focus::before {
+    transition-duration: $button__focus-animation-delay, 500ms;
+    background-color: var(--button__press-color);
   }
 
   &.mdw-theme__colored {
@@ -145,7 +143,13 @@ $button__focus-animation-duration: 1667ms;
     content: none
   }
 
+  &[disabled]::before,
+  &[disabled]::after {
+    content: none;
+  }
+
   // Extended touch target
+  /* 
   @media (any-pointer: coarse) {
     &::after {
       content: "";
@@ -157,6 +161,7 @@ $button__focus-animation-duration: 1667ms;
       transform: translateY(-50%);
     }
   }
+  */
 
   &[disabled],
   &.mdw-button.mdw-theme__colored[disabled], {
